--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
+	"id": "task-as-note",
+	"name": "Task as Note Plugin",
+	"version": "0.0.1",
+	"minAppVersion": "1.9.0",
 	"description": "Demonstrates some of the capabilities of the Obsidian API.",
 	"author": "Obsidian",
 	"authorUrl": "https://obsidian.md",
