--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "task-as-note",
-	"name": "Task as Note Plugin",
-	"version": "0.0.1",
-	"minAppVersion": "1.9.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+  "id": "task-properties",
+  "name": "Task Properties",
+  "version": "0.0.1",
+  "minAppVersion": "1.9.0",
+  "description": "An Obsidian plugin that syncs task statuses into note properties.",
+  "author": "Simon Liang",
+  "authorUrl": "https://divby0.io",
+  "fundingUrl": "https://github.com/sponsors/lhr0909",
+  "isDesktopOnly": false
 }
